@@ -68,6 +68,8 @@ You can get a list of commands by typing the command ``\?``:
 +----------------------+------------------------------------------------------------------------------------+
 | ``\q``               | Quit Crate shell                                                                   |
 +----------------------+------------------------------------------------------------------------------------+
+| ``\check``           | Query the checks.sys table for failing cluster checks                              |
++----------------------+------------------------------------------------------------------------------------+
 
 
 ===============
