@@ -50,6 +50,7 @@ Successful connects will give you some information about the servers you connect
     | http://127.0.0.1:44209 | crate     | ...     | TRUE      | OK      |
     +------------------------+-----------+---------+-----------+---------+
     CONNECT OK
+    Crate 0.51.1 does not support the cluster "check" command
 
 If you connect to more than one server, the command will succeed
 if at least one server is reachable::
@@ -62,6 +63,7 @@ if at least one server is reachable::
     | http://300.300.300.300:4295 | NULL      | 0.0.0   | FALSE     | Server not... |
     +-----------------------------+-----------+---------+-----------+-----------...-+
     CONNECT OK
+    Crate 0.51.1 does not support the cluster "check" command
 
 Once the shell is connected, SQL statements can be executed simply by entering
 them without any special arguments like this::
