@@ -1,5 +1,5 @@
 [versions]
-crate_server = 0.50.3
+crate_server = 0.51.1
 
 Jinja2 = 2.7.3
 MarkupSafe = 0.23
